--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /nigelsMadness/pythonProject/input/north-america-latest.osm.pbf
 /nigelsMadness/pythonProject/input/south-america-latest.osm.pbf
 /nigelsMadness/pythonProject/input/
+/nigelsMadness/pythonProject/output/merged/
