--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-/nigelsMadness/pythonProject/input/*
-/nigelsMadness/pythonProject/output/merged/*
+/nigelsMadness/pythonProject/input/
+/nigelsMadness/pythonProject/output/merged/
+
